[gd_scene load_steps=40 format=3 uid="uid://cbhsl1c3avuvn"]

[ext_resource type="Texture2D" uid="uid://d208o6uasgx2a" path="res://character_sprite/battle/christina_bullet.png" id="1_dqe6t"]
[ext_resource type="Script" path="res://combat/christina_bullet.gd" id="1_g3xh5"]

[sub_resource type="Animation" id="Animation_o7g27"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gjagb"]
resource_name = "dash_down"
length = 0.10001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_402v0"]
resource_name = "dash_left"
length = 0.10001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}

[sub_resource type="Animation" id="Animation_erkhq"]
resource_name = "dash_right"
length = 0.10001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_m2xpf"]
resource_name = "dash_up"
length = 0.10001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}

[sub_resource type="Animation" id="Animation_xwv0f"]
resource_name = "idle_down"
length = 0.10001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_77wmd"]
resource_name = "idle_left"
length = 0.10001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_vl2d5"]
resource_name = "idle_right"
length = 0.10001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_2427y"]
resource_name = "idle_up"
length = 0.10001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_yuptc"]
resource_name = "move_down"
length = 0.80001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 0, 2, 0]
}

[sub_resource type="Animation" id="Animation_71x3t"]
resource_name = "move_left"
length = 0.80001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 3, 5, 3]
}

[sub_resource type="Animation" id="Animation_g5dct"]
resource_name = "move_right"
length = 0.80001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [7, 6, 8, 6]
}

[sub_resource type="Animation" id="Animation_xawye"]
resource_name = "move_up"
length = 0.80001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [10, 9, 11, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o32d0"]
_data = {
"RESET": SubResource("Animation_o7g27"),
"dash_down": SubResource("Animation_gjagb"),
"dash_left": SubResource("Animation_402v0"),
"dash_right": SubResource("Animation_erkhq"),
"dash_up": SubResource("Animation_m2xpf"),
"idle_down": SubResource("Animation_xwv0f"),
"idle_left": SubResource("Animation_77wmd"),
"idle_right": SubResource("Animation_vl2d5"),
"idle_up": SubResource("Animation_2427y"),
"move_down": SubResource("Animation_yuptc"),
"move_left": SubResource("Animation_71x3t"),
"move_right": SubResource("Animation_g5dct"),
"move_up": SubResource("Animation_xawye")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1vgma"]
animation = &"dash_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fcu0l"]
animation = &"dash_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pmr5m"]
animation = &"dash_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nllqo"]
animation = &"dash_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_clqqb"]
blend_point_0/node = SubResource("AnimationNodeAnimation_1vgma")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_fcu0l")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_pmr5m")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_nllqo")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x1i7g"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vxagt"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jdue4"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e2ltk"]
animation = &"idle_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_ajxvp"]
blend_point_0/node = SubResource("AnimationNodeAnimation_x1i7g")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_vxagt")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_jdue4")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_e2ltk")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_syjq7"]
animation = &"move_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p0nl8"]
animation = &"move_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rfbqk"]
animation = &"move_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_masmp"]
animation = &"move_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_lx2ua"]
blend_point_0/node = SubResource("AnimationNodeAnimation_syjq7")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_p0nl8")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_rfbqk")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_masmp")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_c4ujm"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sxnmw"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d5mbo"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kpe7e"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7j3yu"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lpqrv"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fvdh3"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_1ghfy"]
states/dash/node = SubResource("AnimationNodeBlendSpace2D_clqqb")
states/dash/position = Vector2(414, 203)
states/idle/node = SubResource("AnimationNodeBlendSpace2D_ajxvp")
states/idle/position = Vector2(331, 100)
states/move/node = SubResource("AnimationNodeBlendSpace2D_lx2ua")
states/move/position = Vector2(500, 100)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_c4ujm"), "idle", "move", SubResource("AnimationNodeStateMachineTransition_sxnmw"), "move", "idle", SubResource("AnimationNodeStateMachineTransition_d5mbo"), "idle", "dash", SubResource("AnimationNodeStateMachineTransition_kpe7e"), "dash", "idle", SubResource("AnimationNodeStateMachineTransition_7j3yu"), "dash", "move", SubResource("AnimationNodeStateMachineTransition_lpqrv"), "move", "dash", SubResource("AnimationNodeStateMachineTransition_fvdh3")]
graph_offset = Vector2(-198, 18)

[node name="christina_bullet" type="CharacterBody2D"]
script = ExtResource("1_g3xh5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_dqe6t")
hframes = 4
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o32d0")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_1ghfy")
anim_player = NodePath("../AnimationPlayer")
parameters/dash/blend_position = Vector2(-0.00259292, 0.00973463)
parameters/idle/blend_position = Vector2(-0.00480306, 0.00973463)
parameters/move/blend_position = Vector2(-0.442843, -0.0292035)

[node name="dash_timer" type="Timer" parent="."]
wait_time = 0.2

[node name="can_dash_timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="can_dash_timer" to="." method="_on_can_dash_timer_timeout"]
